--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=apicocktail
+
+# Configuracion para el acceso a la Base de Datos
+spring.jpa.hibernate.ddl-auto=update
+
+# Puerto donde escucha el servidor una vez se inicie
+server.port=8080
+
+# Datos de conexion con la base de datos H2
+spring.datasource.url=jdbc:h2:file:~/cocktail.db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
